Restructured repo, made config with default values, updated README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "TERRARIA_VERSION=1405"
     volumes:
       - "./worlds:/data/worlds"
-      - "./config.txt:/data/config/config.txt:ro"
+      - "./configs:/data/configs/config.txt"
       - "./logs:/data/logs"
+      - "./scripts:/data/scripts"
     restart: always
