--- a/data/configs/config.ini
+++ b/data/configs/config.ini
@@ -1,13 +1,13 @@
 # This is an example config file for the Terraria Server.
 # Please report crashes by opening up an issue at https://github.com/OoLunar/Terraria_Docker_Server/issues/new?assignees=OoLunar&labels=Crashlog&template=crashlog-report.md&title=%5BCrashlog+Report%5D.
 # If you know for sure this isn't a Docker issue, email your crashlog.txt to support@terraria.org.
-# See https://github.com/OoLunar/terraria_vanilla_server/tree/master/configs/config.ini for the default values.
+# See https://github.com/OoLunar/Terraria_Docker_Server/blob/master/data/configs/config.ini for the default values.
 
 # The location of the banlist. Should be /data/configs/banlist.ini
-banlist=/data/configs/banlist.txt
+banlist=/data/configs/banlist.ini
 
-# Load a world from a filepath and automatically starts the server. Should be /data/worlds/world.wld
-world=/data/worlds/world.wld
+# Load a world from a filepath and automatically starts the server. Should be /data/Worlds/world.wld
+world=/data/Worlds/world.wld
 
 # Set the server password.
 password=
@@ -19,7 +19,7 @@ autocreate=2
 worldname=world.wld
 
 # Sets the folder where world files will be stored
-worldpath=/data/worlds/
+worldpath=/data/Worlds/
 
 # Sets the difficulty of the world when using autocreate 0 (classic), 1 (expert), 2 (master), 3 (journey). Defaults to 1 (expert).
 difficulty=1
